# AI-Media-Streaming

./: .gitignore  CMakeLists.txt  README.md
examples/test/: performance_test.cpp  rtp_yuv_receiver.cpp  rtp_yuv_sender.cpp  test_ffmpeg_streaming.cpp  test_rtp_streaming.cpp  test_streaming.cpp  udp_server.cpp
include/: codec_interface.h  logger.h  network_transport.h  rate_control_interface.h  rtp_transport.h  stream_manager.h  stream_session.h
src/core/: logger.cpp  stream_manager.cpp  stream_session.cpp
src/network/: network_transport.cpp  packet_manager.cpp  rtp_transport.cpp
src/plugins/codec/: codec_interface.cpp  example_custom_codec.cpp  ffmpeg_codec.cpp
src/plugins/rate_control/: example_ai_rate_control.cpp  rate_control_interface.cpp
tools/: bandwidth_monitor.sh  network_emulator.sh  test_network_emulation.sh
